segunda grabacion modifico el index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <a href="#">
-            <img class="logo" src="./assets/img/logo.png" alt="Logo Tienda de mascotas">
+            <img class="logo" src="./assets/img/logo.png" alt="Logo Tienda de mascotassssss">
         </a>
         <nav class="navHeader">
             <ul class="ulHeader">
